2012-06-12 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_modules.php
	 include/functions_agents.php: Fixed problem when modules are 
	 repeated in source and target agents. 
	 
	* operation/events/events_list.php: Delete double confirmation when
	an event is deleted.
	
	Merged from trunk.

2012-06-12 Miguel de Dios <miguel.dedios@artica.es>
	
	* images/console/icons/light_ok.png, images/console/icons/light.png:
	modified the files for to give more coherence.
	
	* images/console/icons/user_warning.png,
	images/console/icons/user_bad.png,
	images/console/icons/user_ok.png: added lost status item for the
	visual map.

2012-06-12 Miguel de Dios <miguel.dedios@artica.es>
	
	* images/console/background/switch_3com.gif: removed unused
	background because it is in gif....and it is so ugly.
	
	* images/console/background/Nortel-3510-24T-800x477.jpg: fixed the
	image, now it is a standar jpg.

2012-06-12  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_servers.php,
	  godmode/servers/modificar_server.php: Added real-time export server
	  stats.

2012-06-12 Miguel de Dios <miguel.dedios@artica.es>
	
	* extras/pandoradb_migrate_v3.2_to_v4.0.sql: added the lost
	semicolons in some standments.
	
	* godmode/reporting/visual_console_builder.php: restore the search
	modules without entities, because there was a bug into the recon
	server that recode two times the name, now run all parts fine.

2012-06-12 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/agentes/estado_agente.php: Improved
	performance using new functions.
	
2012-06-12 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/tree.php: Fixed some errors with tree view
	for policies.

2012-06-12 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_forecast.php
	 include/functions_reporting.php
	 include/functions_ui.php
	 godmode/reporting/reporting_builder.list_items.php
	 godmode/reporting/reporting_builder.php